--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "inquirer-directory": "^2.1.0",
     "inquirer-file-path": "^1.0.0",
     "log-update": "^2.2.0",
+    "moment": "^2.19.4",
+    "moment-duration-format": "^1.3.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "wav-file-info": "0.0.8",
